--- a/prereq-ts/airdrop/package.json
+++ b/prereq-ts/airdrop/package.json
@@ -3,6 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "keygen": "ts-node ./keygen.ts",
+    "airdrop": "ts-node ./airdrop.ts",
+    "transfer": "ts-node ./transfer.ts",
+    "enroll": "ts-node ./enroll.ts"
+  },
   "dependencies": {
     "@solana/web3.js": "^1.98.2",
     "@types/node": "^24.0.4",
