--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,20 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+solana-starter/.gitignore
+solana-starter/rs
+solana-starter/ts/prereqs
+solana-starter/ts/programs
+solana-starter/ts/tools
+solana-starter/ts/.gitignore
+solana-starter/ts/.yarnrc.yml
+solana-starter/ts/package.json
+solana-starter/ts/tsconfig.json
+solana-starter/ts/cluster1/programs
+solana-starter/ts/cluster1/wallet
+solana-starter/ts/cluster1/v*
+
+
+
 target
 *wallet.json
 
