yarn add @solana/web3.js

--- a/escrow_q3_anchor/package.json
+++ b/escrow_q3_anchor/package.json
@@ -9,7 +9,8 @@
     "@metaplex-foundation/mpl-token-metadata": "^3.4.0",
     "@metaplex-foundation/umi": "^1.2.0",
     "@metaplex-foundation/umi-bundle-defaults": "^1.2.0",
-    "@solana/spl-token": "^0.4.13"
+    "@solana/spl-token": "^0.4.13",
+    "@solana/web3.js": "^1.98.2"
   },
   "devDependencies": {
     "@types/bn.js": "^5.1.0",
