--- a/vault/package.json
+++ b/vault/package.json
@@ -2,7 +2,8 @@
   "license": "ISC",
   "scripts": {
     "lint:fix": "prettier */*.js \"*/**/*{.js,.ts}\" -w",
-    "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check"
+    "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check",
+     "test": "jest"
   },
   "dependencies": {
     "@codama/cli": "^1.1.2",
