--- a/capstone/anchor-loudness/Anchor.toml
+++ b/capstone/anchor-loudness/Anchor.toml
@@ -15,5 +15,9 @@ url = "https://api.apr.dev"
 cluster = "localnet"
 wallet = "~/.config/solana/id.json"
 
+#[provider]
+#cluster = "Devnet"
+#wallet = "./HTurbin3-wallet.json"
+
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
