--- a/capstone/anchor-loudness/Anchor.toml
+++ b/capstone/anchor-loudness/Anchor.toml
@@ -11,13 +11,23 @@ anchor_loudness = "3chRm8Uw232StQpy6G5nVAokSz7bTiUN4e6pvB95PRw2"
 [registry]
 url = "https://api.apr.dev"
 
-[provider]
-cluster = "localnet"
-wallet = "~/.config/solana/id.json"
-
 #[provider]
-#cluster = "Devnet"
-#wallet = "./HTurbin3-wallet.json"
+#cluster = "localnet"
+#wallet = "~/.config/solana/id.json"
+
+[provider]
+cluster = "devnet"
+wallet = "../Turbin3-wallet.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
+
+#https://www.anchor-lang.com/docs/references/anchor-toml#testvalidator
+
+[test.validator]
+url = "https://api.devnet.solana.com"
+#url = "https://turbine-solanad-4cde.devnet.rpcpool.com/168dd64f-ce5e-4e19-a836-f6482ad6b396"
+
+#[[test.validator.clone]]
+#address = "6JgUWRNpHJFYP3qCzHzzjCTnMCrZ9hb1RLGUuZrMt8eB" #mock data feed sound level from phone mic
+
