--- a/capstone/solana-app-kit/mobile-appkit-loudness/package.json
+++ b/capstone/solana-app-kit/mobile-appkit-loudness/package.json
@@ -26,7 +26,7 @@
     "@dynamic-labs/solana-extension": "4.0.0-alpha.52",
     "@ethersproject/shims": "^5.7.0",
     "@expo/metro-runtime": "^4.0.1",
-    "@expo/vector-icons": "^14.1.0",
+    "@expo/vector-icons": "^14.0.4",
     "@metaplex-foundation/umi": "^1.2.0",
     "@moonpay/react-native-moonpay-sdk": "^1.0.7",
     "@privy-io/expo": "^0.45.0",
@@ -63,11 +63,12 @@
     "crypto-browserify": "^3.12.1",
     "date-fns": "^4.1.0",
     "events": "^3.3.0",
-    "expo": "^52.0.28",
+    "expo": "^52.0.47",
     "expo-apple-authentication": "^7.1.3",
     "expo-application": "~6.0.2",
     "expo-asset": "^11.0.5",
     "expo-auth-session": "^6.0.3",
+    "expo-av": "^15.0.2",
     "expo-blur": "^14.0.3",
     "expo-build-properties": "^0.13.3",
     "expo-clipboard": "^7.0.1",
@@ -95,6 +96,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
+    "react-native-audio-analyzer": "^3.1.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.20.2",
